# parse_rss

./: README.md  all_podcasts.json  all_podcasts_w_covers.json  all_podcasts_w_files.json  all_podcasts_w_mp4.json  all_podcasts_w_pd.json  all_podcasts_w_ytid.json  check_files.py  download_files.py  download_podcasts.py  gen_cover.py  gen_kdpv.py  get_podcasts.py  get_pub_dates.py  pyproject.toml  render_video.py  render_video_norm.py  upload_video.py
img/: README.md
mp3/: README.md
mp4/: README.md
