[tool.poetry]
name = "parse_rss"
version = "0.1.0"
description = ""
authors = ["eucariot <eucariot@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
xmltodict = "^0.12.0"
Pillow = "^8.1.0"
google-api-python-client = "^1.12.8"
google-auth = "^1.26.1"
google-auth-oauthlib = "^0.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
